docs/api/qiskit/2.4/qiskit.transpiler.passes.LitinskiTransformation.mdx
---
title: LitinskiTransformation (v2.4)
description: API reference for qiskit.transpiler.passes.LitinskiTransformation in qiskit v2.4
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.LitinskiTransformation
---

# LitinskiTransformation

<Class id="qiskit.transpiler.passes.LitinskiTransformation" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/passes/optimization/litinski_transformation.py#L21-L122" signature="qiskit.transpiler.passes.LitinskiTransformation(*args, **kwargs)" modifiers="class">
  Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Applies Litinski transform to a circuit.

  The transform applies to a circuit containing Clifford, single-qubit $R_Z$-rotation gates (including $T$ and $T^\dagger$), and standard $Z$-measurements, and moves Clifford gates to the end of the circuit. In the process, it transforms $R_Z$-rotations to Pauli product rotations, and $Z$-measurements to Pauli product measurements.

  The pass supports all of the Clifford gates in the list returned by [`get_clifford_gate_names()`](qiskit.quantum_info.get_clifford_gate_names "qiskit.quantum_info.get_clifford_gate_names"):

  `["id", "x", "y", "z", "h", "s", "sdg", "sx", "sxdg", "cx", "cz", "cy", "swap","iswap", "ecr", "dcx"]`

  The list of supported $R_Z$-rotations is:

  `["t", "tdg", "rz"]`

  Example:

  ```python
  from qiskit import generate_preset_pass_manager
  from qiskit.circuit import QuantumCircuit
  from qiskit.transpiler.passes import LitinskiTransformation

  litinski = LitinskiTransformation(fix_clifford=False, use_ppr=True)

  rz_basis = ["rz", "h", "x", "cx"]
  pm = generate_preset_pass_manager(basis_gates=rz_basis)
  pm.optimization.append(litinski)

  qc = QuantumCircuit(3, 1)
  qc.h(0)
  qc.rz(1.23, 0)
  qc.cx(0, 1)
  qc.t(1)
  qc.cx(1, 2)
  qc.measure(2, 0)

  pbc = pm.run(qc)
  ```

  References:

  \[1] Litinski. A Game of Surface Codes. [Quantum 3, 128 (2019)](https://quantum-journal.org/papers/q-2019-03-05-128)

  **Parameters**

  *   **fix\_clifford** – If `False` (non-default), the returned circuit contains only `PauliEvolution` gates, with the final Clifford gates omitted. Note that in this case the operators of the original and synthesized circuits will generally not be equivalent.
  *   **insert\_barrier** – If `True` and `fix_clifford=True`, insert a barrier between the circuit and the final cliffords. This argument has no effect if `fix_clifford=False`.
  *   **use\_ppr** – If `True`, use [`PauliProductRotationGate`](qiskit.circuit.library.PauliProductRotationGate "qiskit.circuit.library.PauliProductRotationGate") to represent the Pauli rotation gates. This is encouraged to improve performance using a fully Rust-backed path. If `False` or `None`, use [`PauliEvolutionGate`](qiskit.circuit.library.PauliEvolutionGate "qiskit.circuit.library.PauliEvolutionGate").

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.LitinskiTransformation.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.LitinskiTransformation.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### execute

  <Function id="qiskit.transpiler.passes.LitinskiTransformation.execute" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/basepasses.py#L161-L180" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any)) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable) *| None*) – A callback function which is called per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any), [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")]
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.LitinskiTransformation.name" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/passmanager/base_tasks.py#L67-L69" signature="name()">
    Name of the pass.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str)
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.LitinskiTransformation.run" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/passes/optimization/litinski_transformation.py#L102-L122" signature="run(dag)">
    Run the LitinskiTransformation pass on `dag`.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit._accelerate.circuit.DAGCircuit")) – The input DAG.

    **Returns**

    The output DAG.

    **Raises**

    [**TranspilerError**](/docs/api/qiskit/2.4/transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – If the circuit contains gates not supported by the pass.

    **Return type**

    [*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit._accelerate.circuit.DAGCircuit")
  </Function>

  ### update\_status

  <Function id="qiskit.transpiler.passes.LitinskiTransformation.update_status" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/basepasses.py#L182-L190" signature="update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – Pass manager state to update.
    *   **run\_state** (*RunState*) – Completion status of current task.

    **Returns**

    Updated pass manager state.

    **Return type**

    [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")
  </Function>
</Class>

